# ml-based-analysis-of-sound

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
data/: README.md
data/scripts/: deduplicate_and_sort_labels.py  download_youtube_audio.py  generate_dataset.py  summarise_class_distribution.py  summarise_data.py
data/test/: a-touch-of-zen.csv
src/: data_loader.py  data_loader_mel_cqt.py  preprocessing.py
src/configs/: audio_params.yaml  audio_params_irmas.yaml  labels.yaml  labels_irmas.yaml
src/gui/: __init__.py  gradio_interface.py  predictor.py
src/models/: CNN.py  CRNN.py  README.md  __init__.py
src/notebooks/: utils.py  visualise.ipynb
src/scripts/: convert_mp3_to_wav.py  generate_chinese_train_cqt.py  generate_data_from_json.py  generate_irmas_test_cqt.py  generate_irmas_test_mels.py  generate_irmas_train_cqt.py  generate_irmas_train_mels.py  generate_log_mels.py  generate_mixed_train_mel_cqt.py  generate_mixed_train_mels.py  generate_test_manifest.py  generate_train_manifests.py
src/scripts/unused/: generate_test_mels.py  (+2 more)
src/test/: test.ipynb  test_chinese_mel.ipynb  test_chinese_mel_cqt.ipynb  test_chinese_mel_cqt.py  test_irmas_mel.ipynb  test_irmas_mel_cqt.ipynb  test_irmas_mel_cqt.py  test_pretrain.ipynb  utils.py  utils_mel_cqt.py
src/train/: train.py  train_chinese_mel.ipynb  train_chinese_mel.py  train_chinese_mel_cqt.ipynb  train_chinese_mel_cqt.py  train_cnn.ipynb  train_irmas_mel.ipynb  train_irmas_mel.py  train_irmas_mel_cqt.ipynb  train_irmas_mel_cqt.py  utils.py  utils_mel_cqt.py
src/utils/: safe_paths.py
(+91 files in other folders)
